--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ sweet_render.xcodeproj
 debug
 release
 shipping
-src/local_settings.lua
+local_settings.lua
 /reyes.sublime-project
 /reyes.sublime-workspace
