Add math submodule at src/math

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/zlib"]
 	path = src/zlib
 	url = git@github.com:cwbaker/zlib.git
+[submodule "src/math"]
+	path = src/math
+	url = git@github.com:cwbaker/math.git
