--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ os:
   - linux
   - osx
   - windows
+git:
+  submodules_depth: 1
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://github.com/cwbaker/forge/releases/download/v0.0.2-rc.2/forge-linux-v0.0.2-rc.2.tar.gz; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://github.com/cwbaker/forge/releases/download/v0.0.2-rc.2/forge-macos-v0.0.2-rc.2.tar.gz; fi
